# graspp_2025_spring

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
data/examples/module_1/: world_bank_data.csv
notebooks/assignment_group/milestone_1/: trade_corybaird.ipynb
notebooks/assignment_individual/HW1/: HW1_FilichAliaksandr.ipynb  HW1_LE_TueLan.ipynb  HW1_RamadhaniFauziah.ipynb
notebooks/module_1/week_1/: notebook_basics.ipynb
notebooks/module_1/week_2/: coding_tools.md  download_api.ipynb
notebooks/module_1/week_3/: build_data.ipynb  building_python_files.ipynb
notebooks/module_2/week_4/: visualization_basics.ipynb
reports/assignments/milestone_1/: coding_tools.md  extracredit_explainer.md  groupassignment_explainer.md
src/data/: pipeline_wb_descriptive.py
src/examples/: function_basic.py  function_import_data.py  function_manipulate_save.py  oop_basic.py  oop_import_data.py  oop_import_data_notebook.py  oop_manipulate_save.py
